# PoseGraph-tutorial

Graph_SLAM/: README.md  poses_optimized_obs.txt  poses_optimized_ref.txt
Graph_SLAM/data_map/Map1/: Map1.pgm
Graph_SLAM/data_map/Map1/experience_data/laser/: laser0.txt  laser1.txt
Graph_SLAM/data_map/Map1/experience_data/odom/: odom0.txt
Graph_SLAM/data_map/Map2/: Map1.yaml  save_test.yaml
Graph_SLAM/data_map/Map2/experience_data/laser/: laser0.txt
Graph_SLAM/devel/: .catkin  local_setup.sh
Graph_SLAM/devel/lib/pkgconfig/: Graph_tuto.pc
Graph_SLAM/devel/share/Graph_tuto/cmake/: Graph_tutoConfig.cmake
Graph_SLAM/src/Graph_tuto/: CMakeLists.txt
Graph_SLAM/src/Graph_tuto/include/: system.hpp
Graph_SLAM/src/Graph_tuto/include/Graph_tuto/: Solver.hpp  angle_manifold.h
Graph_SLAM/src/Graph_tuto/include/Graph_tuto/internal/ceres/: CTestTestfile.cmake  Makefile
Graph_SLAM/src/Graph_tuto/src/: DataBase.cpp  Graph.cpp  ICP.cpp  kdtree.cpp  main.cpp  plot_results_opt.py  plot_results_ori.py  pose_graph_2d.cpp
Graph_slam/: poses_observation.txt  poses_optimized.txt  poses_optimized_obs.txt  poses_optimized_ref.txt  poses_original.txt
Graph_slam/data_map/Map1/: .map_file.txt.swp  Map1.yaml  ex.pgm  map_file.txt
Graph_slam/data_map/Map2/: Map1.pgm  map_file.txt
Graph_slam/data_map/Map2/tmp_map/: Map1.pgm
Graph_slam/devel/: .catkin  .rosinstall  local_setup.sh
Graph_slam/devel/lib/pkgconfig/: Graph_tuto.pc
Graph_slam/src/Graph_tuto/: CMakeLists.txt
Graph_slam/src/Graph_tuto/include/: system.hpp
Graph_slam/src/Graph_tuto/src/: DataBase.cpp  Graph.cpp  Solver.cpp  plot_results.py  plot_results_opt.py  plot_results_ori.py
Graph_slam/tmp_poses/: poses_optimized.txt
Simple_slam/: CMakeLists.txt  helloworld.cc
ceres_tutorial/: CMakeLists.txt  plot_results.py  pose_graph_2d.cc
ceres_tutorial/include/: normalize_angle.h
ceres_tutorial/include/common/: read_g2o.h
helloceres/: helloceres_pose_2d.cc  helloworld.cc  se3_estimation.cc
(+14 files in other folders)
